fix(oauth2-client): return mutable list from getAllSessions to allow in-place sort